# Advent-Of-Code

./: .editorconfig  README.md  pyproject.toml
2019/day-01/: day-01.py
2019/day-02/: day-02.py
2019/day-03/: day-03.py
2019/day-04/: day-04.py
2019/day-05/: day-05.py
2019/day-06/: day-06.py
2019/day-07/: day-07.py
2020/day-01/: README.md  day-01.py
2020/day-02/: README.md  day-02.py
2020/day-03/: README.md  day-03.py
2020/day-04/: README.md  day-04.py
2020/day-05/: README.md  day-05.py
2020/day-06/: README.md  day-06.py
2020/day-07/: README.md  day-07.py
2020/day-08/: README.md  day-08.py
2020/day-09/: README.md  day-09.py
2020/day-10/: README.md  day-10.py
2020/day-11/: README.md  day-11.py
2020/day-12/: README.md  day-12.py
2020/day-13/: README.md  day-13.py
2020/day-14/: README.md  day-14.py
2020/day-15/: README.md  day-15.py
2020/day-16/: README.md  day-16.py
2020/day-17/: README.md  day-17.py
2020/day-18/: README.md  (+1 more)
2025/: day-01.ipynb  day-02.ipynb
day-01/: README.md  solve.py
day-02/: solve.py
day-03/: README.md  solve.py
day-04/: README.md  solve.py
day-05/: README.md  solve.py
day-06/: solve.py
day-07/: README.md  solve.py
day-08/: solve.py
day-09/: README.md  solve.py
day-10/: README.md  solve.py
day-11/: README.md  solve.py
day-12/: solve.py
day-13/: solve.py
day-14/: README.md  solve.py
day-15/: solve.py
day-16/: solve.py
day-17/: solve.py
day-18/: solve.py
day-19/: README.md  solve.py
day-20/: solve.py
day-21/: solve.py
day-22/: solve.py
mylib/: aoc_basics.py
(+95 files in other folders)
