[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of Code challenges"
authors = ["Patrick Pichler <ppichler@outlook.at>"]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.2"
numpy = "^1.23.0"
nographs = "^3.0.1"
pyparsing = "^3.0.9"
rich = "^13.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
